# Research-Agent

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  Makefile  README.md  pyproject.toml  scratch_run_nb.py  scratch_update_nb.py
.agents/rules/: architecture-guide.md  backend-guide.md  coding-guide.md  cybersecurity-guide.md  development-guide.md  devops-guide.md  mcp-server-guide.md  tests-guide.md
.agents/skills/architecture-planning/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: pre-commit-ci.yml
agent/core_agent/: README.md  agent.py  config.py  model_armor.py
agent/deployment/: deploy.py
agent/tests/: test_auxiliars.py  test_builder.py  test_config.py  test_kb_tools.py  test_mcp_factory.py  test_security.py  test_skills_factory.py  test_time_tools.py
docs/: ADK-Intro.md
docs/ADK/: ADK-02-Conversational-Context.md  ADK-03-Engines.md  ADK-04-Agent-Engine-Deployment.md  ADK-05-Gemini-Enterprise-Connection.md
docs/ADRs/: 002-Authentication-Strategy.md
docs/AI-Agent-Development/: 04-Agent-Engine-Deployment.md  05-Gemini-Enterprise-Connection.md  06-OAuth-Inside-Gemini-Enterprise.md  07-Artifacts-Management.md  12-Multi-Agent-Architecture.md  13-Artifact-Rendering-Callback-Scope.md  README.md
docs/Authentication/: 01-Auth-Methods.md  02-a-Setup-OAuth.md  03-OAuth-Flow.md  04-MCP-Tools-and-Auth-Process.md  05-Drive-Connector-OAuth-Scopes.md
docs/security/: bigquery-mcp-oauth-validation.md  gcs-mcp-oauth-validation.md  thread-safe-token-management.md
mcp_servers/big_query/: README.md
mcp_servers/gcs/: README.md
mcp_servers/google_calendar/: README.md
mcp_servers/google_drive/: README.md
notebooks/: deployed_agent.ipynb  model_armor.ipynb
pipelines/enterprise_knowledge_base/: create_resources.sh  delete_resources.sh  orchestrator.py
terraform/: README.md
terraform/ai_agent_resources/: README.md  ai-agent-services-cloud-build-cd.yaml  ai-agent-services-cloud-build-ci.yaml  main.tf  terraform.tfvars  variables.tf
terraform/bq_mcp_server_resources/: README.md  main.tf  mcp-server-services-cloud-build-cd.yaml  mcp-server-services-cloud-build-ci.yaml  terraform.tfvars  variables.tf
terraform/drive_mcp_server_resources/: README.md  main.tf  mcp-server-services-cloud-build-cd.yaml  mcp-server-services-cloud-build-ci.yaml  terraform.tfvars  variables.tf
terraform/ekb_pipeline_resources/: main.tf  terraform.tfvars  variables.tf
terraform/gcs_mcp_server_resources/: README.md  main.tf  terraform.tfvars  variables.tf
terraform/google_calendar_mcp_server_resources/: README.md  main.tf  terraform.tfvars  variables.tf
terraform/mcp_server_resources/: README.md  main.tf  mcp-server-services-cloud-build-cd.yaml  mcp-server-services-cloud-build-ci.yaml  terraform.tfvars  variables.tf
terraform/scripts/: Makefile  README.md  bootstrap.sh  cicd_triggers_creation.sh  cleanup.sh
terraform/shared_resources/: main.tf
(+88 files in other folders)
